@startuml
class com.example.psychomeclick.recyclers.SubjectNodesAdapter {
- List<Node> dataList
- Stack<List<Node>> formerLists
+ DataViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(DataViewHolder,int)
+ int getItemCount()
- void updateRecyclerView(List<Node>)
+ void backToFormerNodes()
- void putToFormerList(List<Node>)
}


class com.example.psychomeclick.recyclers.SubjectNodesAdapter$DataViewHolder {
~ TextView textView
~ PercentageRingView percentageRingView
}

class com.example.psychomeclick.recyclers.SetRecycler {
- SetAdapter adapter
- Fragment f
- boolean canDelete
- void init(Context)
+ void setFragment(Fragment)
+ void setCanDelete(boolean)
}


class com.example.psychomeclick.recyclers.SetRecycler$SetAdapter {
~ Context context
~ List<CardSet> sets
+ void addSet(CardSet)
+ void removeAllSets()
+ SetsViewHolder onCreateViewHolder(ViewGroup,int)
+ int getItemCount()
+ void onBindViewHolder(SetsViewHolder,int)
}


class com.example.psychomeclick.recyclers.SetRecycler$SetAdapter$SetsViewHolder {
~ TextView length
~ Button deleteBtn
~ void bind(CardSet)
}


class com.example.psychomeclick.recyclers.ChatAdapter {
- List<Message> messages
- Context context
+ MessageViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(MessageViewHolder,int)
+ int getItemCount()
+ void addMessage(Message)
}


class com.example.psychomeclick.recyclers.ChatAdapter$MessageViewHolder {
~ TextView messageText
~ ImageView iconImage
~ RelativeLayout parent
~ boolean grad
~ void bind(Message)
- void graduallyWriteText(TextView,String)
}


class com.example.psychomeclick.recyclers.QuestionListAdapter {
- List<String> dataList
- FragmentManager fragmentManager
+ DataViewHolder onCreateViewHolder(ViewGroup,int)
+ void onBindViewHolder(DataViewHolder,int)
+ int getItemCount()
}


class com.example.psychomeclick.recyclers.QuestionListAdapter$DataViewHolder {
~ TextView textView
~ ImageView imageView
~ Button btn
}

class com.example.psychomeclick.recyclers.CardsRecycler {
- CardAdapter adapter
- String setId
- boolean canEdit
+ void setSetId(String)
- void init(Context)
+ void setCanEdit(boolean)
- {static} void updateCardsInDb(List<Card>,String)
}


class com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter {
~ Context context
~ List<Card> cardList
+ void addCard(Card)
+ void removeCard(Card)
+ CardsRecycler.CardAdapter.CardViewHolder onCreateViewHolder(ViewGroup,int)
+ int getItemCount()
+ void onBindViewHolder(CardsRecycler.CardAdapter.CardViewHolder,int)
}


class com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter$CardViewHolder {
~ EditText term
~ TextView numberTv
~ Card card
~ void bind(Card)
}




com.example.psychomeclick.recyclers.Adapter <|-- com.example.psychomeclick.recyclers.SubjectNodesAdapter
com.example.psychomeclick.recyclers.SubjectNodesAdapter +.. com.example.psychomeclick.recyclers.SubjectNodesAdapter$DataViewHolder
com.example.psychomeclick.recyclers.ViewHolder <|-- com.example.psychomeclick.recyclers.SubjectNodesAdapter$DataViewHolder
androidx.recyclerview.widget.RecyclerView <|-- com.example.psychomeclick.recyclers.SetRecycler
com.example.psychomeclick.recyclers.SetRecycler +.. com.example.psychomeclick.recyclers.SetRecycler$SetAdapter
com.example.psychomeclick.recyclers.Adapter <|-- com.example.psychomeclick.recyclers.SetRecycler$SetAdapter
com.example.psychomeclick.recyclers.SetRecycler$SetAdapter +.. com.example.psychomeclick.recyclers.SetRecycler$SetAdapter$SetsViewHolder
com.example.psychomeclick.recyclers.ViewHolder <|-- com.example.psychomeclick.recyclers.SetRecycler$SetAdapter$SetsViewHolder
com.example.psychomeclick.recyclers.Adapter <|-- com.example.psychomeclick.recyclers.ChatAdapter
com.example.psychomeclick.recyclers.ChatAdapter +.. com.example.psychomeclick.recyclers.ChatAdapter$MessageViewHolder
com.example.psychomeclick.recyclers.ViewHolder <|-- com.example.psychomeclick.recyclers.ChatAdapter$MessageViewHolder
com.example.psychomeclick.recyclers.Adapter <|-- com.example.psychomeclick.recyclers.QuestionListAdapter
com.example.psychomeclick.recyclers.QuestionListAdapter +.. com.example.psychomeclick.recyclers.QuestionListAdapter$DataViewHolder
com.example.psychomeclick.recyclers.ViewHolder <|-- com.example.psychomeclick.recyclers.QuestionListAdapter$DataViewHolder
androidx.recyclerview.widget.RecyclerView <|-- com.example.psychomeclick.recyclers.CardsRecycler
com.example.psychomeclick.recyclers.CardsRecycler +.. com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter
com.example.psychomeclick.recyclers.Adapter <|-- com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter
com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter +.. com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter$CardViewHolder
com.example.psychomeclick.recyclers.ViewHolder <|-- com.example.psychomeclick.recyclers.CardsRecycler$CardAdapter$CardViewHolder
@enduml